--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "components/esp_littlefs"]
 	path = components/esp_littlefs
-	url = https://github.com/joltwallet/esp_littlefs.git
+	url = https://github.com/joltwallet/esp_littlefs
 [submodule "components/esp32-camera"]
 	path = components/esp32-camera
 	url = https://github.com/espressif/esp32-camera
+[submodule "components/esp-tflite-micro"]
+	path = components/esp-tflite-micro
+	url = https://github.com/espressif/esp-tflite-micro
